--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = ["surprise", "numpy<2", "pandas", "tensorflow"]
 
 [dependency-groups]
 dev = ["pytest", "pytest-cov", "pytest-mock", "ipykernel"]
+gpu = ["tensorflow[and-cuda]"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
